[gd_scene load_steps=10 format=3 uid="uid://b8a81sepiteu"]

[ext_resource type="Texture2D" uid="uid://ckcupgk4he1ng" path="res://Assets/graphics/blocks.png" id="1_1w3oc"]
[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_5brmf"]
[ext_resource type="AudioStream" uid="uid://c260isjhjmr1r" path="res://Assets/sounds/paddle_hit.wav" id="3_2qpci"]
[ext_resource type="AudioStream" uid="uid://c7rt3ksso6mot" path="res://Assets/sounds/brick-hit-1.wav" id="4_wksjm"]
[ext_resource type="AudioStream" uid="uid://boow6lc0ejtgs" path="res://Assets/sounds/wall_hit.wav" id="5_cc2ke"]
[ext_resource type="AudioStream" uid="uid://bnqyla0v3wjk8" path="res://Assets/sounds/brick-hit-2.wav" id="7_7xuh5"]
[ext_resource type="AudioStream" uid="uid://bbj0cjthxnob6" path="res://Assets/sounds/no-select.wav" id="7_wp1ef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oibam"]
atlas = ExtResource("1_1w3oc")
region = Rect2(96, 48, 8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_w1h32"]
radius = 12.0

[node name="Ball" type="CharacterBody2D"]
script = ExtResource("1_5brmf")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = SubResource("AtlasTexture_oibam")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w1h32")

[node name="PaddleHitEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2qpci")

[node name="BrickHitEffect1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wksjm")

[node name="WallHitEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cc2ke")

[node name="BrickHitEffect2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_7xuh5")

[node name="UnbreakableHitEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wp1ef")
